# em-simulation-platform

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  API_REFERENCE.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  RELEASE.md  pyproject.toml  requirements.txt  run_all_demos.py  setup.py
.agent/: rules.md
.agent/workflows/: add-demo.md  bench-performance.md  hpc-rebuild.md  verify-release.md
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  publish.yml
benchmarks/: biot_savart_benchmark.py  comparison_benchmark.py  profile_em_demo.py  stress_test_memory.py
demos/: 05_ring_coil_demo.py
demos/em/: 01_validation_demo.ipynb  01_validation_demo.py  02_dipole_approximation_demo.ipynb  02_dipole_approximation_demo.py  03_plotting_capabilities_demo.ipynb  03_plotting_capabilities_demo.py  04_helmholtz_coil_demo.py  05_ring_coil_demo.py  Field_Plotting_Demo.ipynb  README.md  README.rst  dem0_plot_capabilities.ipynb  demo_plot_capabilities.ipynb  demo_plot_capabilities.py  dipole_approximation_demo.ipynb  helmholtz_coil_demo.py  magnetic_field_calculation_demo.ipynb  rectangular_loop_demo.ipynb  solenoid_field_demo.ipynb  straight_wire_demo.ipynb
demos/notebooks/: 01_validation_demo.ipynb  02_dipole_approximation_demo.ipynb  03_plotting_capabilities_demo.ipynb
demos/runoutput/Field_Plotting_Demo/: Field_Plotting_Demo_converted.py  Field_Plotting_Demo_output.txt  Field_Plotting_Demo_wrapper.py
demos/runoutput/dipole_approximation_demo/: dipole_approximation_demo_converted.py  dipole_approximation_demo_output.txt  dipole_approximation_demo_wrapper.py
demos/runoutput/magnetic_field_calculation_demo/: magnetic_field_calculation_demo_converted.py  magnetic_field_calculation_demo_output.txt  magnetic_field_calculation_demo_wrapper.py
demos/runoutput/mtflib_beginner_demo/: mtflib_beginner_demo_converted.py  mtflib_beginner_demo_output.txt  mtflib_beginner_demo_wrapper.py
demos/runoutput/rectangular_loop_demo/: rectangular_loop_demo_converted.py  rectangular_loop_demo_output.txt  rectangular_loop_demo_wrapper.py
demos/runoutput/solenoid_field_demo/: solenoid_field_demo_converted.py  solenoid_field_demo_output.txt  solenoid_field_demo_wrapper.py
demos/runoutput/straight_wire_demo/: straight_wire_demo_converted.py  straight_wire_demo_output.txt  straight_wire_demo_wrapper.py
demos/runoutput/taylor_map_demo/: taylor_map_demo_converted.py  taylor_map_demo_output.txt  taylor_map_demo_wrapper.py
docs/: api_reference.rst  build_docs.sh  conf.py  em_app.plotting.rst  em_app.rst  em_app.solvers.rst  em_app.sources.rst  em_app.vector_fields.rst  gallery.rst  index.rst  modules.rst  theory.rst
runoutput/em/: 01_validation_demo_converted.py  01_validation_demo_output.txt  01_validation_demo_wrapper.py  02_dipole_approximation_demo_converted.py  02_dipole_approximation_demo_output.txt  02_dipole_approximation_demo_wrapper.py  03_plotting_capabilities_demo_converted.py  03_plotting_capabilities_demo_output.txt  03_plotting_capabilities_demo_wrapper.py  04_helmholtz_coil_demo_output.txt  04_helmholtz_coil_demo_wrapper.py
scripts/: run_all_demos.py
scripts/linux/: setup_dev_env.sh
scripts/windows/: setup_env.bat
src/applications/em/: current_ring.py  rectangular_loop.py
src/em_app/: __init__.py  biot_savart.py  current_ring.py  currentcoils.py  magneticfield.py  plotting.py  solvers.py  sources.py  straight_wire.py  vector_fields.py
src/em_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_biot_savart.py  test_core.py  test_currentcoils.py  test_demos.py  test_em_app.py  test_initialization.py  test_magneticfield.py  test_optimization_vectorization.py  test_physics.py  test_plotting.py  test_solvers.py  test_sources.py  test_sources_extended.py  test_vector_field_grid.py  test_vector_field_ops.py  test_vectors_and_fields.py
tests/demos/applications/: test_em_module.py
