[build-system]
requires = ["setuptools>=61.0", "numpy>=1.20"]
build-backend = "setuptools.build_meta"

[project]
name = "em-app"
version = "0.2.0"
authors = [
    { name="Shashikant Manikonda", email="manikonda@outlook.com" },
]
description = "A package for Electromagnetic applications using MTFLibrary."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
"Development Status :: 4 - Beta",
"Intended Audience :: Developers",
"Intended Audience :: Science/Research",
"License :: OSI Approved :: MIT License",
"Programming Language :: Python :: 3",
"Topic :: Scientific/Engineering :: Mathematics",
"Topic :: Software Development :: Libraries",
]
dependencies = [
"numpy",
"mtflib @ git+https://github.com/shashi-manikonda/MTFLibrary.git@main",
]

[project.optional-dependencies]
dev = [
"pytest",
"matplotlib",
"pandas",
"jupytext",
"nbconvert",
"ipykernel",
]
benchmark = [
"matplotlib",
"mpi4py",
]

[project.urls]
"Homepage" = "https://github.com/shashi-manikonda/em-simulation-platform"
"Bug Tracker" = "https://github.com/shashi-manikonda/em-simulation-platform/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff] 
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
preview = true